#2231 Fix bullet lists overflow.

--- a/html/themes/custom/pmmi_bootstrap/css/style.css
+++ b/html/themes/custom/pmmi_bootstrap/css/style.css
@@ -12450,6 +12450,13 @@ ol, ul {
   padding-left: 20px;
 }
 
+.bullet-list ul, .views-field-body ul,
+.block-body ul,
+.node-body ul,
+.content ul {
+  overflow: hidden;
+}
+
 .bullet-list ul li, .views-field-body ul li,
 .block-body ul li,
 .node-body ul li,
